- Query constructor must trim arg sql before checking for emptyness.
- Error message prefix is now Database[client name][rmdbs type][database name].
- Do NOT close statement/free result before getting native error.
- MariaDb query must have own nativeError() because \mysqli_stmt has own
  separate error list.
- Result fetchField method, which gets value; not column metadata.

SimpleComplex/Database 1.x, 2018-05-03
--------------------------------------
- No custom LogicExceptions; logical exceptions should be detected during
  dev/test, and it's better that all (unexpected) database exceptions
  are/inherit from a single class (DbRuntimeException).
- (prepared statement) Prevent de-referencing when using an arguments list
  whose value buckets aren't set as &$value.
- MsSqlQuery case-insentive search for insert ID magic extra query.
- Readme MS SQL example must have certain options for providing affected rows
  and insert ID.
- Readme describe engines.

SimpleComplex/Database 1.x, 2018-05-02
--------------------------------------
- Parameter value escaper shan't escape semicolon, not even when multi-query.
- Result nextRow() is a result interface method.
- MariaDb nextRow() shan't always fail.
- All multi-query features moved to separate (extending) interfaces and classes;
  MS SQL implementation no longer relates to multi-querying at all.
- Forbid reconnecting if unfinished transaction.

SimpleComplex/Database 1.x, 2018-05-01
--------------------------------------
- prepare() support associative arguments array.
- MS SQL insertId() shan't err when ID ;-)
- Better query logging.
- Sql string variables renamed to 'sql'; from 'query'.

SimpleComplex/Database 1.x, 2018-04-30
--------------------------------------
- MS SQL insertId(), and better error handling.
- Freeing result is result method, not a query method.
- Result constructor must accommodate (MySQLi) connection object as well
  as statement.